# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  WORKTREE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md  run.sh
.claude/commands/: gac.md  implement-feature.md
backend/: ai_generator.py  app.py  config.py  logger.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_integration.py  test_rag_system.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  quality.sh
